--- a/style.css
+++ b/style.css
@@ -246,7 +246,21 @@ a.button.secondary {
     align-items: center;
     justify-content: center; }
     #footer .social-links a {
-      margin: 0 10px; }
+      margin: 0 10px;
+      width: 32px;
+      height: 32px; }
+    #footer .social-links .facebook {
+      background: url("images/core-img/icon-facebook.svg") no-repeat center; }
+    #footer .social-links .facebook:hover, #footer .social-links .facebook:focus {
+      background: url("images/core-img/icon-facebook-hover.svg") no-repeat center; }
+    #footer .social-links .twitter {
+      background: url("images/core-img/icon-twitter.svg") no-repeat center; }
+    #footer .social-links .twitter:hover, #footer .social-links .twitter:focus {
+      background: url("images/core-img/icon-twitter-hover.svg") no-repeat center; }
+    #footer .social-links .instagram {
+      background: url("images/core-img/icon-instagram.svg") no-repeat center; }
+    #footer .social-links .instagram:hover, #footer .social-links .instagram:focus {
+      background: url("images/core-img/icon-instagram-hover.svg") no-repeat center; }
 
 /** Responsive **/
 @media (max-width: 1024px) {
@@ -303,5 +317,17 @@ a.button.secondary {
       margin: 20px 0; }
       #footer .sub-links ul {
         margin: 0; } }
+@media (max-width: 480px) {
+  #intro > div {
+    padding: 20px 0; }
+
+  .logo {
+    margin-bottom: 10px; }
+
+  .download-buttons {
+    margin-top: 20px; }
+
+  #snippets {
+    padding: 40px 30px; } }
 
 /*# sourceMappingURL=style.css.map */
